2004-11-06 Scott Dattalo <scott@dattalo.com>
	* cli/socket.cc, gui/gui_profile.cc, gui/gui_stack.cc, 
	gui/gui_symbol.cc, src/symbol.cc, src/symbol.h, src/value.cc
	src/value.h:
	gpsim symbols now support more of the methods of the Value class.
	
2004-11-05 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_clear.cc, cli/cmd_disasm.cc, cli/cmd_set.cc
	cli/command.cc, cli/scan.ll, gui/gui_breadboard.cc, src/errors.cc
	src/expr.cc, src/operator.cc, src/value.cc, src/value.h:
	Cleaned up the Value class. 

2004-11-05 Scott Dattalo <scott@dattalo.com>
	* src/attribute.h, src/attribute.cc, Makefile.am: Removed attribute.*
	from gpsim. The class 'Value' has replaced it.
	
2004-11-04 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_break.cc, cli/cmd_log.cc, cli/cmd_symbol.cc, cli/cmd_x.cc,
	src/attribute.cc, src/cod.cc, src/expr.cc, src/gpsim_classes.h,
	src/modules.cc, src/modules.h, src/p12x.cc, src/p16f62x.cc,
	src/p16x5x.cc, src/p16x6x.cc, src/p16x7x.cc, src/p16x8x.cc,
	src/p18x.cc, src/pic-instructions.cc, src/pic-processor.cc,
	src/processor.h, src/symbol.cc, src/symbol.h, src/value.cc,
	src/value.h:
	- Rearranged class heirarchy so that gpsimValue derives from
	gpsimObject instead of Value.
	- Substitued the Value class for those places where the Attribute
	class is used.
	* modules/encoder.cc, modules/led.cc, modules/logic.cc, 
	modules/push_button.cc, modules/resistor.cc, modules/switch.cc,
	modules/usart.cc, modules/video.cc


2004-11-04 Scott Dattalo <scott@dattalo.com>
	* regression/create_stc, regression/simulate, src/expr.cc,
	src/symbol.cc, src/symbol.h, src/value.cc:
	Regression tests were failing due to recent parser changes.

2004-11-03 Scott Dattalo <scott@dattalo.com>
	* cli/parse.yy, cli/scan.ll, src/14bit-registers.cc, src/16bit-instructions.cc,
	src/16bit-registers.cc, src/breakpoints.cc, src/breakpoints.h, src/expr.cc,
	src/expr.h, src/icd.cc, src/modules.cc, src/operator.cc, src/operator.h,
	src/p16x7x.cc, src/pic-instructions.cc, src/pic-instructions.h, 