@@ -305,14 +305,14 @@ project:</p>
   for Windows</a> project:</p>
 <ul>
       <li>
-      <a href="http://www.gimp.org/~tml/gimp/win32/glib-dev-2.4.2.zip" name="glib_dev">glib-dev-2.4.5.zip</a></li>
+      <a href="http://www.gimp.org/~tml/gimp/win32/glib-dev-2.4.7.zip" name="glib_dev">glib-dev-2.4.7.zip</a></li>
       <li>
-      <a href="http://www.gimp.org/~tml/gimp/win32/glib-2.4.5.zip" name="glib">
-      glib-2.4.5.zip</a></li>
+      <a href="http://www.gimp.org/~tml/gimp/win32/glib-2.4.7.zip" name="glib">
+      glib-2.4.7.zip</a></li>
       <li>
-      <a href="http://www.gimp.org/~tml/gimp/win32/gtk+-dev-2.4.7.zip" name="gtk_dev">gtk+-dev-2.4.7.zip</a></li>
+      <a href="http://www.gimp.org/~tml/gimp/win32/gtk+-dev-2.4.13.zip" name="gtk_dev">gtk+-dev-2.4.13.zip</a></li>
       <li>
-      <a href="http://www.gimp.org/~tml/gimp/win32/gtk+-2.4.7.zip" name="gtk">gtk+-2.4.7.zip</a></li>
+      <a href="http://www.gimp.org/~tml/gimp/win32/gtk+-2.4.13.zip" name="gtk">gtk+-2.4.13.zip</a></li>
       <li>
       <a href="http://www.gimp.org/~tml/gimp/win32/pango-dev-1.4.1.zip" name="pango_dev">pango-dev-1.4.1.zip</a></li>
       <li>
