@@ -210,7 +210,6 @@ Section "MainSection" SEC01
   File "${GPSIM_ROOT}\src\16bit-processors.h"
   File "${GPSIM_ROOT}\src\16bit-registers.h"
   File "${GPSIM_ROOT}\src\16bit-tmrs.h"
-  File "${GPSIM_ROOT}\src\attribute.h"
   File "${GPSIM_ROOT}\src\breakpoints.h"
   File "${GPSIM_ROOT}\src\cod.h"
   File "${GPSIM_ROOT}\src\eeprom.h"
@@ -259,106 +258,42 @@ Section "MainSection" SEC01
 
   SetOutPath "$INSTDIR\examples\12bit"
   File "${GPSIM_ROOT}\examples\12bit\Makefile.am"
-  File "${GPSIM_ROOT}\examples\12bit\gpio_stim.stc"
-  File "${GPSIM_ROOT}\examples\12bit\p12_it.asm"
-  File "${GPSIM_ROOT}\examples\12bit\p12c508_test.asm"
-  File "${GPSIM_ROOT}\examples\12bit\p12c508_test.stc"
-  File "${GPSIM_ROOT}\examples\12bit\p12c509_test.asm"
-  File "${GPSIM_ROOT}\examples\12bit\p12x.inc"
-  File "${GPSIM_ROOT}\examples\12bit\pcl_test_12bit.asm"
+  File "${GPSIM_ROOT}\examples\12bit\*.asm"
+  File "${GPSIM_ROOT}\examples\12bit\*.inc"
+  File "${GPSIM_ROOT}\examples\12bit\*.stc"
 
   SetOutPath "$INSTDIR\examples\14bit"
-  File "${GPSIM_ROOT}\examples\14bit\analog_stim.stc"
-  File "${GPSIM_ROOT}\examples\14bit\analog_stim2.stc"
-  File "${GPSIM_ROOT}\examples\14bit\ap.stc"
-  File "${GPSIM_ROOT}\examples\14bit\async_pulse.stc"
-  File "${GPSIM_ROOT}\examples\14bit\async_stim.stc"
-  File "${GPSIM_ROOT}\examples\14bit\async_stim2.stc"
-  File "${GPSIM_ROOT}\examples\14bit\bcd.asm"
-  File "${GPSIM_ROOT}\examples\14bit\dtmf.stc"
-  File "${GPSIM_ROOT}\examples\14bit\eetest.asm"
-  File "${GPSIM_ROOT}\examples\14bit\interrupt_test.asm"
-  File "${GPSIM_ROOT}\examples\14bit\interrupt_test.stc"
-  File "${GPSIM_ROOT}\examples\14bit\iopin_stim.asm"
-  File "${GPSIM_ROOT}\examples\14bit\iopin_stim.stc"
-  File "${GPSIM_ROOT}\examples\14bit\ioport_stim.stc"
-  File "${GPSIM_ROOT}\examples\14bit\it.asm"
-  File "${GPSIM_ROOT}\examples\14bit\loop_test.asm"
-  File "${GPSIM_ROOT}\examples\14bit\mod_test.asm"
-  File "${GPSIM_ROOT}\examples\14bit\module_test.stc"
-  File "${GPSIM_ROOT}\examples\14bit\p16c64.inc"
-  File "${GPSIM_ROOT}\examples\14bit\p16c64_ccp.asm"
-  File "${GPSIM_ROOT}\examples\14bit\p16c64_ccp.stc"
-  File "${GPSIM_ROOT}\examples\14bit\p16c64_pwm.asm"
-  File "${GPSIM_ROOT}\examples\14bit\p16c64_pwm.stc"
-  File "${GPSIM_ROOT}\examples\14bit\p16c64_test.asm"
-  File "${GPSIM_ROOT}\examples\14bit\p16c64_test.stc"
-  File "${GPSIM_ROOT}\examples\14bit\p16c64_tmr1.asm"
-  File "${GPSIM_ROOT}\examples\14bit\p16c65.inc"
-  File "${GPSIM_ROOT}\examples\14bit\p16c65_pwm.asm"
-  File "${GPSIM_ROOT}\examples\14bit\p16c65_pwm.stc"
-  File "${GPSIM_ROOT}\examples\14bit\p16c71.inc"
-  File "${GPSIM_ROOT}\examples\14bit\p16c71_test.asm"
-  File "${GPSIM_ROOT}\examples\14bit\p16c74.inc"
-  File "${GPSIM_ROOT}\examples\14bit\p16c74_pwm.stc"
-  File "${GPSIM_ROOT}\examples\14bit\p16c74_test.asm"
-  File "${GPSIM_ROOT}\examples\14bit\p16c74_test.stc"
-  File "${GPSIM_ROOT}\examples\14bit\p16c84.inc"
-  File "${GPSIM_ROOT}\examples\14bit\p16f877.inc"
-  File "${GPSIM_ROOT}\examples\14bit\p16f877_test.asm"
-  File "${GPSIM_ROOT}\examples\14bit\p16f877_test2.asm"
-  File "${GPSIM_ROOT}\examples\14bit\p16f877_test2.stc"
-  File "${GPSIM_ROOT}\examples\14bit\pcl_test.asm"
-  File "${GPSIM_ROOT}\examples\14bit\portc_stim.stc"
-  File "${GPSIM_ROOT}\examples\14bit\pulse_measure.asm"
-  File "${GPSIM_ROOT}\examples\14bit\sine.asm"
-  File "${GPSIM_ROOT}\examples\14bit\stim_test.asm"
-  File "${GPSIM_ROOT}\examples\14bit\sync_stim.stc"
-  File "${GPSIM_ROOT}\examples\14bit\t.stc"
-  File "${GPSIM_ROOT}\examples\14bit\time_test.stc"
-  File "${GPSIM_ROOT}\examples\14bit\twist.asm"
-  File "${GPSIM_ROOT}\examples\14bit\usart.stc"
-  File "${GPSIM_ROOT}\examples\14bit\usart_14.asm"
-  File "${GPSIM_ROOT}\examples\14bit\vertical_adder.asm"
-  File "${GPSIM_ROOT}\examples\14bit\wdt_test.asm"
+  File "${GPSIM_ROOT}\examples\14bit\*.asm"
+  File "${GPSIM_ROOT}\examples\14bit\*.inc"
+  File "${GPSIM_ROOT}\examples\14bit\*.stc"
 
   SetOutPath "$INSTDIR\examples\16bit"
-  File "${GPSIM_ROOT}\examples\16bit\bt18.asm"
-  File "${GPSIM_ROOT}\examples\16bit\calltest18.asm"
-  File "${GPSIM_ROOT}\examples\16bit\indtest18.asm"
-  File "${GPSIM_ROOT}\examples\16bit\it18.asm"
-  File "${GPSIM_ROOT}\examples\16bit\mul.asm"
-  File "${GPSIM_ROOT}\examples\16bit\p18.asm"
-  File "${GPSIM_ROOT}\examples\16bit\p18c242.inc"
-  File "${GPSIM_ROOT}\examples\16bit\p18c242_test.asm"
-  File "${GPSIM_ROOT}\examples\16bit\sine18.asm"
-  File "${GPSIM_ROOT}\examples\16bit\tbl.asm"
-  File "${GPSIM_ROOT}\examples\16bit\tmr0_18.asm"
-  File "${GPSIM_ROOT}\examples\16bit\usart_18.asm"
+  File "${GPSIM_ROOT}\examples\16bit\*.asm"
+  File "${GPSIM_ROOT}\examples\16bit\*.inc"
 
   SetOutPath "$INSTDIR\examples\modules\led_test"
-  File "${GPSIM_ROOT}\examples\modules\led_test\led_mod.asm"
-  File "${GPSIM_ROOT}\examples\modules\led_test\led_mod.stc"
+  File "${GPSIM_ROOT}\examples\modules\led_test\*.asm"
+  File "${GPSIM_ROOT}\examples\modules\led_test\*.stc"
 
   SetOutPath "$INSTDIR\examples\modules\logic_test"
   File "${GPSIM_ROOT}\examples\modules\logic_test\Makefile"
-  File "${GPSIM_ROOT}\examples\modules\logic_test\logic_mod.asm"
-  File "${GPSIM_ROOT}\examples\modules\logic_test\logic_mod.stc"
+  File "${GPSIM_ROOT}\examples\modules\logic_test\*.asm"
+  File "${GPSIM_ROOT}\examples\modules\logic_test\*.stc"
 
   SetOutPath "$INSTDIR\examples\modules\mod_test"
   File "${GPSIM_ROOT}\examples\modules\mod_test\Makefile"
-  File "${GPSIM_ROOT}\examples\modules\mod_test\mod_test.asm"
-  File "${GPSIM_ROOT}\examples\modules\mod_test\mod_test.stc"
+  File "${GPSIM_ROOT}\examples\modules\mod_test\*.asm"
+  File "${GPSIM_ROOT}\examples\modules\mod_test\*.stc"
 
   SetOutPath "$INSTDIR\examples\modules\paraface_test"
   File "${GPSIM_ROOT}\examples\modules\paraface_test\Makefile"
-  File "${GPSIM_ROOT}\examples\modules\paraface_test\partest.asm"
-  File "${GPSIM_ROOT}\examples\modules\paraface_test\partest.stc"
+  File "${GPSIM_ROOT}\examples\modules\paraface_test\*.asm"
+  File "${GPSIM_ROOT}\examples\modules\paraface_test\*.stc"
 
   SetOutPath "$INSTDIR\examples\modules\usart_test"
   File "${GPSIM_ROOT}\examples\modules\usart_test\Makefile"
-  File "${GPSIM_ROOT}\examples\modules\usart_test\usart.asm"
-  File "${GPSIM_ROOT}\examples\modules\usart_test\usart.stc"
+  File "${GPSIM_ROOT}\examples\modules\usart_test\*.asm"
+  File "${GPSIM_ROOT}\examples\modules\usart_test\*.stc"
 
   SetOutPath "$INSTDIR\examples\projects"
   File "${GPSIM_ROOT}\examples\projects\README"
