@@ -1,3 +1,8 @@
+2004-11-07 Borut Razem <borut.razem@siol.net>
+	* plat/win32/gpsim.def, plat/win32/gpsim.nsi, src/makefile.mingw,
+	  src/src.vcproj: MSVC sync
+	* doc/gpsimWin32.html: updated glib version to 2.4.7, gtk+ version to 2.4.13
+
 2004-11-06 Scott Dattalo <scott@dattalo.com>
 	* cli/socket.cc, gui/gui_profile.cc, gui/gui_stack.cc, 
 	gui/gui_symbol.cc, src/symbol.cc, src/symbol.h, src/value.cc
@@ -29,7 +34,6 @@
 	* modules/encoder.cc, modules/led.cc, modules/logic.cc, 
 	modules/push_button.cc, modules/resistor.cc, modules/switch.cc,
 	modules/usart.cc, modules/video.cc
-
 
 2004-11-04 Scott Dattalo <scott@dattalo.com>
 	* regression/create_stc, regression/simulate, src/expr.cc,
